# linebot-template

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
conf/redis/: redis.conf
mkfile/: Makefile.function  Makefile.style  countdown.sh
src/: app.py  config.py  main.py  wsgi.py
src/constants/: const.py  error_code.py  linebot_const.py
src/controllers/: developments.py  features.py
src/handlers/: console.py  data_cache.py  error_handler.py  redis_key.py
src/services/: linebot_service.py
